--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
+@font-face {
+  font-family: Poppins-Regular;
+  src: url('./assests/fonts/Poppins-Regular.ttf')  format('truetype');
+}
+@font-face {
+  font-family: Poppins-Medium;
+  src: url('./assests/fonts/Poppins-Medium.ttf')  format('truetype');
+}
+@font-face {
+  font-family: Poppins-Bold;
+  src: url('./assests/fonts/Poppins-Bold.ttf')  format('truetype');
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Poppins-Regular, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
