--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: Poppins-Regular;
-  src: url('./assests/fonts/Poppins-Regular.ttf')  format('truetype');
+  src: url('assets/fonts/Poppins-Regular.ttf')  format('truetype');
 }
 @font-face {
   font-family: Poppins-Medium;
-  src: url('./assests/fonts/Poppins-Medium.ttf')  format('truetype');
+  src: url('assets/fonts/Poppins-Medium.ttf')  format('truetype');
 }
 @font-face {
   font-family: Poppins-Bold;
-  src: url('./assests/fonts/Poppins-Bold.ttf')  format('truetype');
+  src: url('assets/fonts/Poppins-Bold.ttf')  format('truetype');
 }
 body {
   margin: 0;
