--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,17 @@
 @font-face {
-  font-family: Poppins-Regular;
-  src: url('assets/fonts/Poppins-Regular.ttf')  format('truetype');
+  font-family: 'Poppins-Regular';
+  src: url('assets/fonts/Poppins-Regular.ttf') format('truetype');
 }
 @font-face {
-  font-family: Poppins-Medium;
-  src: url('assets/fonts/Poppins-Medium.ttf')  format('truetype');
+  font-family: 'Poppins-Medium';
+  src: url('assets/fonts/Poppins-Medium.ttf') format('truetype');
 }
 @font-face {
-  font-family: Poppins-Bold;
-  src: url('assets/fonts/Poppins-Bold.ttf')  format('truetype');
+  font-family: 'Poppins-Bold';
+  src: url('assets/fonts/Poppins-Bold.ttf') format('truetype');
 }
-body {
+* {
   margin: 0;
-  font-family: Poppins-Regular, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  padding: 0;
+  font-family: 'Poppins-Regular', sans-serif;
 }
