--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,5 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins-Regular', sans-serif;
+  font-family: 'Poppins-Regular', sans-serif !important;
 }
