--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/** Default Styling **/
+
 @font-face {
   font-family: 'Poppins-Regular';
   src: url('assets/fonts/Poppins-Regular.ttf') format('truetype');
@@ -13,5 +15,40 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins-Regular', sans-serif !important;
+  font-family: 'Poppins-Regular', sans-serif;
 }
+button {
+  font-family: 'Poppins-Regular', sans-serif !important;
+  font-size: 14px;
+  font-weight: bold;
+  width: 100%;
+  height: 50px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2) !important;
+  text-transform: uppercase;
+}
+
+h4 {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  color: #285169;
+}
+h5 {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  color: #414141;
+}
+h6 {
+  font-family: 'Poppins-Regular', sans-serif !Important;
+  font-size: 16px !important;
+  color: #595959;
+}
+.label {
+  color:#257fc0;
+  font-family: 'Poppins-Medium' !important;
+  font-size: 13px !important;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.caption-grey {
+  color: #707070;
+  text-transform: uppercase;
+}
+
