--- a/src/index.css
+++ b/src/index.css
@@ -51,4 +51,15 @@ h6 {
   color: #707070;
   text-transform: uppercase;
 }
+input {
+  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%) !important;
+  border-radius: 0;
+}
+.MuiInputBase-root{
+  border-radius: 0px !important;
+}
+fieldset{
+  border:none !important;
+}
+
 
