Check-in design Updated

--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -1,6 +1,6 @@
-/*.MuiGrid-grid-xs-12{*/
-/*  padding-top: 20px*/
-/*}*/
+.profile-section .MuiGrid-grid-xs-12{
+  padding-top: 20px
+}
 .notification-section
 {
   border-radius: 0px !important;
