--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -1,5 +1,6 @@
 .order-confirmation .MuiPaper-root {
   padding: 95px;
+  min-height: 435px;
 }
 .order-confirmation .MuiTextField-root {
   width: 100%;
