--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ h6 {
 input {
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%) !important;
   border-radius: 0;
+  font-family: 'Poppins-Medium', sans-serif !important;
 }
 .MuiInputBase-root{
   border-radius: 0px !important;
