--- a/src/pages/invite/invite.css
+++ b/src/pages/invite/invite.css
@@ -11,3 +11,10 @@
   text-transform: initial;
   padding-right: 20px;
 }
+.body-text
+{
+  font-size: 15px;
+  font-family: 'Poppins-Medium', sans-serif !important;
+  color: #414141;
+  padding-top: 8px;
+}
