--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 /** Default Styling **/
 
+
+/*****Fonts*****/
+
 @font-face {
   font-family: 'Poppins-Regular';
   src: url('assets/fonts/Poppins-Regular.ttf') format('truetype');
@@ -12,24 +15,13 @@
   font-family: 'Poppins-Bold';
   src: url('assets/fonts/Poppins-Bold.ttf') format('truetype');
 }
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Poppins-Regular', sans-serif;
-}
-button {
-  font-family: 'Poppins-Regular', sans-serif !important;
-  font-size: 14px;
-  font-weight: bold;
-  height: 50px;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2) !important;
-  text-transform: uppercase;
-  border-radius: 0 !important;
-}
+
+
+/***** Heading Styles *****/
 
 h4 {
   font-family: 'Poppins-Bold', sans-serif !important;
-  color: #285169;
+  color: #214F66;
 }
 h5 {
   font-family: 'Poppins-Bold', sans-serif !important;
@@ -40,8 +32,12 @@ h6 {
   font-size: 16px !important;
   color: #525252;
 }
+
+
+/***** Labels *****/
+
 .label {
-  color:#257fc0;
+  color: #0075BF;
   font-family: 'Poppins-Medium' !important;
   font-size: 13px !important;
   font-weight: 600;
@@ -51,22 +47,122 @@ h6 {
   color: #707070;
   text-transform: uppercase;
 }
+
+
+/****** Buttons ******/
+
+.custom-btn, button {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  font-size: 15px;
+  height: 50px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2) !important;
+  text-transform: uppercase;
+  border-radius: 0 !important;
+}
+.custom-btn:focus {
+  outline: 1px dotted #79C043 !important;
+  outline-offset: 2px !important;
+}
+.custom-btn:disabled {
+  background: black;
+  color: white;
+  opacity: 0.25;
+}
+.cta1-btn {
+  background: #0075BF;
+  color: white;
+}
+.cta1-btn:hover {
+  background: #214F66;
+  color: white;
+}
+.cta2-btn {
+  background: white;
+  color: #0075BF;
+}
+.cta2-btn:hover {
+  color: #79C043;
+}
+.cta3-btn {
+  background: #214F66 !important;
+  color: white;
+}
+.cta3-btn:hover {
+  background: #79c043 !important;
+  color: white;
+}
+
+
+/***** Toggle Button Style *****/
+
+.selected-btn.MuiToggleButton-standard {
+  background: #214F66;
+  color: white;
+  border: none;
+  margin: 0px !important;
+}
+.selected-btn.MuiToggleButton-standard:focus {
+  outline: 1px dotted #79C043 !important;
+  outline-offset: 2px !important;
+}
+.selected-btn.MuiToggleButton-standard:hover {
+  background: #79C043;
+}
+.selected-btn.Mui-selected {
+  background: #79C043 !important;
+  color: white !important;
+}
+
+/****** Form Elements ******/
+
+.MuiTextField-root .MuiInputLabel-root.Mui-focused,
+.MuiTextField-root .MuiInputLabel-root.MuiFormLabel-filled {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  padding: 14px 14px 14px 0px;
+  color: #214F66;
+  font-size: 12px;
+}
+
 input {
+  color: #000;
   border-radius: 0;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'Poppins-Regular', sans-serif !important;
 }
-.MuiInputBase-root{
-  border-radius: 0px !important;
-}
+
 fieldset{
   border:none !important;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%) !important;
 }
 
+
+/***** Body *****/
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins-Regular', sans-serif;
+}
+
+.MuiInputBase-root{
+  border-radius: 0px !important;
+  padding: 0px;
+}
 .card-border
 {
   border-radius: 0px !important;
   border: 1px solid blue;
 }
 
-
+/***** Scrollbar Style *****/
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #e8e8e8;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #7e7e7e;
+  border-radius: 20px;
+  border: 3px solid #7e7e7e;
+}
