--- a/src/components/food-menu-card/food-menu-card.css
+++ b/src/components/food-menu-card/food-menu-card.css
@@ -32,6 +32,7 @@
   font-size: 45px;
   color: #fff;
   font-weight: 800;
+  opacity: 0.95;
 }
 .reward-item.selected .icon {
   position: absolute;
