RW-38 Icon Added

--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -19,3 +19,14 @@
 .payment-form .add-order button {
   width: 100%;
 }
+.payment-form .image-field input {
+  padding-right: 65px !important;
+}
+.payment-form .image-field {
+  position: relative;
+}
+.payment-form .image-field img {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
