RW - Customize Options UI and Functionality
RW - Customize Options UI and Functionality

--- a/src/components/food-menu-card/food-menu-card.css
+++ b/src/components/food-menu-card/food-menu-card.css
@@ -51,6 +51,7 @@
   align-content: center;
   align-items: center;
   height: 100%;
+  margin: 0px !important;
 }
 .reward-item .item-image {
   width: 95%;
