--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -6,3 +6,50 @@
   border: 1px solid #0075BF;
   padding: 20px;
 }
+.choose-reward .choose-btn {
+  min-height: 150px;
+  background: white;
+  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2) !important;
+  margin: 0px 15px 0 0;
+}
+.choose-reward .choose-btn img {
+  min-width: 30%;
+  margin-right: 60px;
+}
+.choose-reward .choose-btn p {
+  font-size: 18px !important;
+  text-transform: capitalize;
+  text-align: left;
+}
+.choose-reward .choose-btn.Mui-selected {
+  border: 2px solid #EE9D26 !important;
+  background: transparent;
+}
+.choose-reward .choose-btn.Mui-selected:after {
+  content: " ";
+  display: block;
+  width: 10px;
+  height: 22px;
+  border: solid #fff;
+  border-width: 0 5px 5px 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -22px;
+  transform: rotate(45deg);
+  margin-left: -126px;
+}
+.choose-reward .choose-btn.Mui-selected:before {
+  content: " ";
+  display: block;
+  border: solid 25px #EE9D26;
+  border-radius: 45px;
+  height: 0px;
+  width: 0px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -30px;
+  margin-left: -145px;
+}
+
