--- a/src/index.css
+++ b/src/index.css
@@ -162,7 +162,7 @@ fieldset{
 .slot-label {
   background: #79C043 !important;
   color: white !important;
-  width: 122px !important;
+  width: calc(100% - 8%) !important;
   display: inline-block !important;
   text-align: center;
   font-size: 12px !important;
@@ -184,7 +184,3 @@ fieldset{
   border: 3px solid #7e7e7e;
 }
 
-input[type="radio"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
