--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -23,14 +23,13 @@
   padding: 0px;
 }
 .order .right-col .selected-btn {
-  min-width: 122px;
+  width: 100%;
   height: 60px;
-  margin-right: 15px !important;
 }
 .order .right-col .time-slot {
   background: #214F66;
   margin-top: 10px;
-  width: calc(100% - 48px);
+  width: 100%;
 }
 .order .right-col #select-more-times,
 .order .right-col .MuiSelect-select {
@@ -49,4 +48,21 @@
   padding: 14px 14px 14px 0px;
   color: #214F66;
   font-size: 12px;
+}
+
+
+@media screen and (max-width: 800px) {
+  .checkout-wrapper {
+    padding: 0px !important;
+  }
+  .checkout-wrapper .order {
+    border-radius: 0px !important;
+    padding: 30px !important;
+  }
+  .order .left-col {
+    padding: 0px 20px 0px 0px !important;
+  }
+  .checkout-wrapper .slot-label {
+    width: calc(100% - 4%) !important;
+  }
 }
