--- a/src/components/food-menu-card/food-menu-card.css
+++ b/src/components/food-menu-card/food-menu-card.css
@@ -4,8 +4,7 @@
   height: 140px;
   border-radius: 0 !important;
   padding: 10px;
-  box-shadow: 2px 2px 2px -1px rgb(0 0 0 / 10%), 2px 2px 2px 2px rgb(0 0 0 / 6%),
-    2px 1px 2px 2px rgb(0 0 0 / 6%) !important;
+  box-shadow: 0px 2px 3px 0px rgb(0 0 0 / 20%) !important;
   border: 1px solid #e6e6e6;
   cursor: pointer;
   position: relative;
@@ -23,28 +22,35 @@
   font-size: 18px;
 }
 .reward-item.selected {
-  border: 1px solid #e58530 !important;
+  border: 2px solid #e58530 !important;
   box-shadow: none !important;
 }
-.reward-item .icon {
-  display: none;
-  justify-content: space-around;
-  font-size: 45px;
-  color: #fff;
-  font-weight: 800;
-  opacity: 0.95;
-}
-.reward-item.selected .icon {
+.reward-item.selected:after {
+  content: " ";
+  display: block;
+  width: 10px;
+  height: 22px;
+  border: solid #fff;
+  border-width: 0 5px 5px 0;
   position: absolute;
-  margin: auto;
-  left: 30px;
-  top: 0;
-  bottom: 0;
-  display: flex;
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  background-color: #e58530;
+  left: 50%;
+  top: 50%;
+  margin-top: -6%;
+  transform: rotate(45deg);
+  margin-left: -32%;
+}
+.reward-item.selected:before {
+  content: " ";
+  display: block;
+  border: solid 25px #EE9D26;
+  border-radius: 45px;
+  height: 0px;
+  width: 0px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -8%;
+  margin-left: -37%;
 }
 .rewards {
   justify-content: center;
@@ -62,6 +68,10 @@
 .item-name {
   font-family: 'Poppins-Medium' !important;
   font-size: 1rem !important;
+  color: rgba(0, 0, 0, 0.54);
+}
+.selected .item-name{
+  color: #000
 }
 
 @media screen and (max-width: 768px) {
