--- a/src/pages/reward-confirmation/reward-confirmation.css
+++ b/src/pages/reward-confirmation/reward-confirmation.css
@@ -14,7 +14,7 @@
   background-color: #2b4b62;
   background-image: url("../../assets/imgs/bg1.png");
   background-size: 70% auto;
-  background-position: bottom right;
+  background-position: bottom -45px right -40px;
   background-repeat: no-repeat;
 
 }
