--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -42,6 +42,36 @@
 .product-detail .add-to-bag {
   width: 100%;
 }
+.product-detail .quantity {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 20px;
+  backgorund: white;
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
+  margin: 0px 30px 10px 30px;
+}
+.product-detail .quantity input,
+.product-detail .quantity button {
+  height: 49px !important;
+  padding: 0px 10px !important;
+  background: transparent;
+  box-shadow: none;
+}
+.product-detail .quantity input {
+  text-align: center;
+  color: #0069aa;
+  font-weight: Bold;
+  border-left: 1px solid #e4e4e4;
+  border-right: 1px solid #e4e4e4;
+}
+.product-detail .quantity button {
+  font-family: 'Poppins-Regular' !important;
+  font-size: 30px;
+  color: #414141;
+}
+.product-detail .quantity fieldset {
+  box-shadow: none !important;
+}
 
 
 @media screen and (max-width: 768px) {
