--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ h6 {
   outline-offset: 2px !important;
 }
 .selected-btn.MuiToggleButton-standard:hover {
-  background: #79C043;
+  background: #214F66;
 }
 .selected-btn.Mui-selected {
   background: #79C043 !important;
