--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -7,6 +7,7 @@
 .product-detail .label.bold {
   font-family: 'Poppins-Bold', sans-serif !important;
   font-size: 18px !important;
+  text-transform: capitalize !important;
 }
 .product-detail h6 {
   margin-bottom: 25px;
