--- a/src/pages/delivery-address/index.css
+++ b/src/pages/delivery-address/index.css
@@ -1,65 +1,69 @@
-.delivery-address-container{
-    padding: 5px 20px;  
+.delivery-address-container {
+  padding: 5px 20px;
 }
-.delivery-address-container .card-panel{
-    border: 1px solid #2E75BF;
-    border-radius: 0px;
-    padding: 15px 15px 15px 20px;
-    box-sizing: border-box;
-    max-width: 382px;
-    position: relative;
-    margin-bottom: 20px;
-}
-
-.delivery-address-container .card-panel .card-content{
-    padding: 0;
+.delivery-address-container .card-panel {
+  border: 1px solid #2e75bf;
+  border-radius: 0px;
+  padding: 15px 15px 15px 20px;
+  box-sizing: border-box;
+  max-width: 382px;
+  position: relative;
+  margin-bottom: 20px;
 }
 
-.delivery-address-container .card-panel .card-content p{
-    padding: 0;
-    font-size: 15px;
-    font-family: 'Poppins-Medium', sans-serif !important;
-    display: block;
-    color: #414141;
-    padding-bottom: 2px;
+.delivery-address-container .card-panel .card-content {
+  padding: 0;
 }
 
-.delivery-address-container .card-panel .card-content p b{
-    font-family: 'Poppins-Bold', sans-serif !important;
-    font-weight: 700;
+.delivery-address-container .card-panel .card-content p {
+  padding: 0;
+  font-size: 15px;
+  font-family: 'Poppins-Medium', sans-serif !important;
+  display: block;
+  color: #414141;
+  padding-bottom: 2px;
+}
+
+.delivery-address-container .card-panel .card-content p b {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  font-weight: 700;
 }
 
 .delivery-address-container a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .delivery-address-container .card-panel .small-button-panel {
-    text-align: right;
-    padding-top: 10px;
+  text-align: right;
+  padding-top: 10px;
 }
 
 .delivery-address-container .card-panel .small-button-panel .link {
-    padding-left: 20px;
-    font-family: 'Poppins-Medium', sans-serif !important;
-    color:#B9B9B9;
-    font-size: 15px;
-    font-weight: 600;
-    cursor: pointer;
+  padding-left: 20px;
+  font-family: 'Poppins-Medium', sans-serif !important;
+  color: #b9b9b9;
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .delivery-address-container .card-panel .small-button-panel .link.default {
-    color:#1F86C7;
-    cursor: pointer;
+  color: #1f86c7;
+  cursor: pointer;
 }
 
 .delivery-address-container .button-panel {
-    max-width: 382px !important;
-    display: block;
-    width: 100% !important;
-    margin: 0;
-    background-color: #0075BF;
-    text-decoration: none;
-    border-radius: 0;
-    height: 53px;
-    line-height: 30px;
+  max-width: 382px !important;
+  display: block;
+  width: 100% !important;
+  margin: 0;
+  background-color: #0075bf;
+  text-decoration: none;
+  border-radius: 0;
+  height: 53px;
+  line-height: 30px;
+}
+
+.no-address {
+  text-align: center;
 }
