--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -95,3 +95,21 @@
     order: 2;
   }
 }
+
+.dummy-bg {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background: 'rgba(0, 0, 0, 0)';
+  z-index: 10000;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  justify-items: center;
+}
