--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -25,6 +25,7 @@
 .order .right-col .selected-btn {
   width: 100%;
   height: 60px;
+  margin: 0px 18px 0px 0px !important;
 }
 .order .right-col .time-slot {
   background: #214F66;
