--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -30,7 +30,8 @@
 }
 .product-detail .menu-items h4 {
   text-transform: uppercase;
-  width: 100%;
+  width: 100%;  
+  font-size: 30px;
 }
 
 .product-detail h5{
