--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -1,8 +1,13 @@
 .product-detail {
-  padding: 60px 160px;
+  padding: 60px 0px;
+  max-width: 1090px;
+  box-sizing: border-box;
+  margin: auto;
 }
 .product-detail h4.heading {
-  font-family: 'Poppins-Medium', SansSerif !Important;
+  font-family: 'Poppins-Medium', sans-serif !important;
+  padding-bottom: 15px;
+  font-size: 32px;
 }
 .product-detail .label.bold {
   font-family: 'Poppins-Bold', sans-serif !important;
@@ -11,6 +16,7 @@
 }
 .product-detail h6 {
   margin-bottom: 25px;
+  color: #214f66;
 }
 .product-detail h6.price {
   font-family: 'Poppins-Bold', SansSerif !important;
@@ -30,32 +36,41 @@
 }
 .product-detail .menu-items h4 {
   text-transform: uppercase;
-  width: 100%;  
-  font-size: 30px;
+  width: 100%;
+  font-size: 26px;
+  padding-bottom: 10px;
 }
 
-.product-detail h5{
+.product-detail .action-panel {
+  margin-top: 30px;
+}
+.product-detail h5 {
   text-transform: uppercase;
   color: #0069aa;
   font-weight: 500;
   font-family: 'Poppins-Medium', sans-serif !important;
   font-size: 16px;
+  padding-bottom: 10px;
 }
 .product-detail .add-to-bag {
-  width: 100%;
+  width: 265px;
+  height: 60px;
+  padding: 10px;
+  box-sizing: border-box;
 }
 .product-detail .quantity {
   display: flex;
   justify-content: space-between;
   border-radius: 20px;
-  backgorund: white;
+  background: white;
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
-  margin: 0px 30px 10px 30px;
+  margin: 0px 30px 0px 30px;
+  width: 200px;
 }
 .product-detail .quantity input,
 .product-detail .quantity button {
-  height: 49px !important;
-  padding: 0px 10px !important;
+  height: 60px !important;
+  padding: 0px 5px !important;
   background: transparent;
   box-shadow: none;
 }
@@ -75,14 +90,13 @@
   box-shadow: none !important;
 }
 
-.ph-fix{
-padding-right: 20px;
+.ph-fix {
+  padding-right: 20px;
 }
 
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1150px) {
   .product-detail {
-    padding: 20px;
+    padding: 40px;
   }
   .product-detail img {
     width: 100%;
@@ -95,13 +109,58 @@ padding-right: 20px;
   }
 }
 
+.product-detail .action-panel .content-panel {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+@media screen and (max-width: 899px) {
+  .product-detail .action-panel {
+    position: fixed;
+    margin: auto;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    padding: 30px;
+    background: #fff;
+    z-index: 1000;
+  }
+  .product-detail .action-panel .content-panel {
+    justify-content: center;
+  }
+  .product-detail h5 {
+    padding-bottom: 0px;
+  }
+}
+
 @media screen and (max-width: 468px) {
+  .product-detail .menu-items h4 {
+    font-size: 23px;
+    padding-bottom: 0px;
+  }
+  .product-detail .action-panel {
+    padding: 20px 5px;
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 20%);
+  }
+  .quantity-label {
+    display: none;
+  }
+  .product-detail {
+    padding: 20px;
+  }
   .ph-fix {
     order: 2;
     padding-top: 20px;
   }
   .img {
     border-radius: 10px;
+  }
+  .product-detail .quantity {
+    margin: 0;
+    margin-right: 10px;
+    width: 280px;
   }
 }
 
