--- a/src/pages/check-in/check-in.css
+++ b/src/pages/check-in/check-in.css
@@ -7,7 +7,7 @@
 }
 .body-text
 {
-  font-size: 15px;
+  font-size: 12px !important;
   font-family: 'Poppins-Medium', sans-serif !important;
   color: #414141;
   padding-top: 8px;
