--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -46,8 +46,8 @@
   font-size: 13px !important;
 }
 
-.welcome-content .left-col .product-card a {
-  margin: 15px 0px 0px 15px;
+.welcome-content .left-col .product-card button {
+  margin: 15px 0px 0px 0px;
   display: inline-block;
   text-decoration: none;
   font-size: 15px !important;
@@ -105,7 +105,9 @@
     display: flex;
     justify-content: space-between;
   }
-  .product-card a {
+  .product-card button {
     margin: 20px 0px 0px 0px !important;
+    padding: 0px;
+    font-size: 13px;
   }
 }
