--- a/src/pages/location/index.css
+++ b/src/pages/location/index.css
@@ -1,8 +1,3 @@
-.gm-style-mtc,
-.gm-fullscreen-control,
-.gm-svpc {
-  display: none !important;
-}
 .location-icon-panel {
   width: 40px;
   height: 40px;
@@ -17,6 +12,7 @@
   border-radius: 2px;
   cursor: pointer;
   background-color: rgb(255, 255, 255);
+  z-index: 1;
 }
 .location-icon-panel .icon{  
   display: block;
