--- a/src/components/order-detail/order-detail.css
+++ b/src/components/order-detail/order-detail.css
@@ -10,6 +10,9 @@
   font-size: 16px !important;
   color: #285169;
 }
+.order-detail h6.n-bold {
+  font-family: 'Poppins-Regular', sans-serif !important;
+}
 .order-detail hr {
   background: #285169;
   height: 1px;
