--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -55,7 +55,9 @@
   color: #214F66;
   font-size: 12px;
 }
-
+.t-size {
+  font-size: 12px;
+}
 .order .add-order {
   text-align: center;
   display: flex;
