--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,9 @@ h6 {
   background: #214F66;
   color: white;
   border: none;
-  margin: 0px !important;
+  width: 100%;
+  height: 60px;
+  margin: 0px 8px 0px 0px !important;
   font-size: 16px;
 }
 .selected-btn.MuiToggleButton-standard:focus {
