--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -23,9 +23,7 @@
   padding: 0px;
 }
 .order .right-col .selected-btn {
-  width: 100%;
-  height: 60px;
-  margin: 0px 8px 0px 0px !important;
+
 }
 .order .right-col .time-slot {
   background: #214F66;
@@ -35,7 +33,7 @@
 .order .right-col .time-slot-selected {
   background: #79C043;
   margin-top: 10px;
-  width: 100%;
+  width: calc(100% - 8px);
 }
 .order .right-col #select-more-times,
 .order .right-col .MuiSelect-select {
@@ -93,5 +91,19 @@
 @media screen and (max-width: 468px) {
   .order .add-order button {
     width: 100%;
+  }
+  .order .selected-btn-group {
+    display: inline-block;
+  }
+  .order .selected-btn {
+    float: left;
+    width: 47.2%;
+    margin-bottom: 10px !important;
+  }
+  .order .time-slot-wrapper {
+    margin-top: 25px;
+  }
+  .order .time-slot-selected {
+    margin-bottom: 64px;
   }
 }
