--- a/src/pages/login2/login2.css
+++ b/src/pages/login2/login2.css
@@ -1,69 +1,35 @@
-.welcome-wrapper {
-  margin: 60px !important;
+.login-wrapper {
+  margin: 62px 139px !important;
 }
-.welcome-content {
+.login-content {
   background: white;
   display: flex;
   justify-content: center;
-  padding: 80px 0px;
+  padding: 77px 75px 88px 93px;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
 }
-.welcome-content h4 {
-  margin-bottom: 20px;
-  font-size: 46px;
+.login-content h4 {
+  margin: 16px 0px 23px 0px;
+  font-size: 49px;
 }
-.welcome-content h5 {
-  margin: 10px 0px 10px 0px;
+.login-content h5 {
+  margin: 16px 0px 23px 0px;
 }
-.welcome-content .left-col {
+.login-content .left-col {
   border-right: 1px solid #0069aa;
-  padding-right: 45px;
-  margin-right: 45px;
+  padding-right: 58px;
+  margin-right: 66px;
 }
-.welcome-content .left-col .product-card {
-  display: flex;
-  justify-content: space-evenly;
-  border: 1px solid #d6d6d6;
-  padding: 10px 10px 10px 10px;
-  margin-top: 15px;
-}
-.welcome-content .left-col .product-card img {
-  width: 30%;
-  height: 100%;
-  margin-right: 10px;
-}
-.welcome-content .order-action {
-  text-align: right;
-}
-.welcome-content .order-action .caption-grey {
-  font-family: 'Poppins-Bold' !important;
-  color: #a4a4a4;
-}
-.welcome-content .order-action .button {
-  font-family: 'Poppins-Bold' !important;
-  font-size: 13px !important;
-}
-
-.welcome-content .left-col .product-card button {
-  margin: 15px 0px 0px 0px;
-  display: inline-block;
-  text-decoration: none;
-  font-size: 15px !important;
-  letter-spacing: 2px;
-}
-.welcome-content .product-card .MuiCardContent-root {
-  padding: 0px 10px;
-}
-.welcome-content .right-col button {
-  margin-top: 10px;
+.login-content .right-col button {
+  margin-top: 14px;
   width: 100%;
 }
-.welcome-content .right-col .res-info {
+.login-content .right-col .res-info {
   margin-bottom: 15px;
 }
-.welcome-content .caption-grey {
+.login-content .caption-grey {
   font-size: 12px;
   text-decoration: none;
   font-family: 'Poppins-Regular' !important;
@@ -71,7 +37,7 @@
 }
 
 @media screen and (max-width: 900px) {
-  .welcome-content {
+  .login-content {
     padding: 35px 0px;
   }
   .left-col {
@@ -79,35 +45,16 @@
     padding: 0px !important;
     margin: 0px 0px 15px 0px !important;
   }
-  .product-card {
-    display: block !important;
-  }
-  .product-card img {
-    float: left;
-  }
 }
 
 @media screen and (max-width: 468px) {
-  .welcome-wrapper {
+  .login-wrapper {
     margin: 15px !important;
   }
-  .welcome-content {
+  .login-content {
     padding: 30px 0px;
   }
-  .welcome-content h4 {
+  .login-content h4 {
     font-size: 25px;
-  }
-  .product-card img {
-    width: 100% !important;
-  }
-  .product-card .order-action {
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-  }
-  .product-card button {
-    margin: 20px 0px 0px 0px !important;
-    padding: 0px;
-    font-size: 13px;
   }
 }
