--- a/src/pages/login2/login2.css
+++ b/src/pages/login2/login2.css
@@ -11,20 +11,42 @@
   border-radius: 30px;
 }
 .login-content h4 {
-  margin: 16px 0px 23px 0px;
+  margin: 0px 0px 23px 0px;
   font-size: 49px;
-}
-.login-content h5 {
-  margin: 16px 0px 23px 0px;
 }
 .login-content .left-col {
   border-right: 1px solid #0069aa;
   padding-right: 58px;
   margin-right: 66px;
 }
-.login-content .right-col button {
+.login-content .right-col .sign-in-btn {
   margin-top: 14px;
   width: 100%;
+  height: 61px;
+  background: white;
+  border: 2px solid #bebebe;
+  color: #747474;
+  padding-left: 70px;
+  font-size: 15px;
+  letter-spacing: 2.25px;
+  display: inline-block;
+  text-align: left;
+}
+.login-content .right-col .sign-in-btn img {
+  position: absolute;
+  left: 17px;
+  top: 11px;
+}
+.login-content .right-col .acc-btn {
+  width: 100%;
+  margin: 10px 0px 37px 0px;
+}
+.login-content .label.bold {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  font-size: 15px !important;
+  margin-top: 20px;
+  text-align: center;
+  display: block;
 }
 .login-content .right-col .res-info {
   margin-bottom: 15px;
@@ -37,13 +59,20 @@
 }
 
 @media screen and (max-width: 900px) {
-  .login-content {
-    padding: 35px 0px;
+  .login-wrapper {
+    margin: 80px 75px !important;
   }
-  .left-col {
+  .login-content {
+    padding: 35px;
+  }
+  .login-content .left-col {
     border-right: none !important;
-    padding: 0px !important;
-    margin: 0px 0px 15px 0px !important;
+    border-bottom: 1px solid #0069aa;
+    padding: 0px 0px 40px 0px !important;
+    margin: 0px 0px 40px 0px !important;
+  }
+  .login-content .right-col {
+    padding: 0px 110px;
   }
 }
 
@@ -52,9 +81,18 @@
     margin: 15px !important;
   }
   .login-content {
-    padding: 30px 0px;
+    padding: 30px;
   }
   .login-content h4 {
     font-size: 25px;
+  }
+  .login-content .right-col {
+    padding: 0px 5px;
+  }
+  .login-content .right-col .sign-in-btn {
+    height: auto;
+  }
+  .sign-in-section button {
+    width: 100% !important;
   }
 }
