--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -8,3 +8,37 @@
 .sign-up-section h4 {
   margin: 5px 0px 10px 0px;
 }
+.sign-up-section .react-date-inputs input {
+  width: 10%;
+  background: white;
+  border: none;
+  height: auto;
+  box-shadow: 1px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%) !important;
+  padding: 16px 14px;
+  margin: 5px 10px 0px 0px;
+  outline: none;
+}
+.sign-up-section .date-field p {
+  color: #9f9a9a !important;
+  font-size: 14px !important;
+  font-weight: 100;
+  font-family: 'Poppins-Regular' !important;
+}
+.sign-up-section .body-text {
+  font-size: 16px !important;
+  font-family: 'Poppins-Regular', sans-serif !important;
+  padding-top: 8px;
+}
+.sign-up-section .body-text span {
+  padding-top: 0px !important;
+  float: left;
+}
+
+
+
+@media screen and (max-width: 468px) {
+
+  .sign-up-section .react-date-inputs input {
+    width: 18.6%;
+  }
+}
