--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -102,8 +102,9 @@
     margin-bottom: 10px !important;
   }
   .order .time-slot-wrapper {
-    margin-top: 25px;
+    margin-top: 35px;
   }
+  .order .time-slot,
   .order .time-slot-selected {
     margin-bottom: 64px;
   }
