--- a/src/pages/login2/login2.css
+++ b/src/pages/login2/login2.css
@@ -37,6 +37,9 @@
   left: 17px;
   top: 11px;
 }
+.login-content .right-col .sign-in-btn img.apple-icon {
+  top: 14px;
+}
 .login-content .right-col .acc-btn {
   width: 100%;
   margin: 14px 0px 37px 0px;
@@ -94,16 +97,17 @@
     padding: 0px 5px;
   }
   .login-content .right-col .sign-in-btn {
-    height: auto;
+    height: 65px;
   }
   .sign-in-section button {
     width: 100% !important;
   }
-  .login-content .right-col .acc-btn {
-    margin-bottom: 25px !important;
-  }
   .login-content .label.bold {
     margin-top: 0px;
     margin-bottom: 35px !important;
+  }
+  .login-content .right-col .acc-btn {
+    width: 100%;
+    margin: 20px 0px 25px 0px;
   }
 }
