--- a/src/components/personal-info/index.css
+++ b/src/components/personal-info/index.css
@@ -26,6 +26,10 @@
 .profile-section .date {
   width: 100% !important;
   text-align: left;
+  font-family: 'Poppins Regular', sans-serif !important;
+  color: black !important;
+  letter-spacing: 0px !important;
+  font-size: 16px !important;
 }
 .bday-text {
   font-family: 'Poppins-Bold';
