--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -13,6 +13,8 @@
   background: white;
   border: none;
   height: auto;
+  -webkit-box-shadow: 1px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%) !important;
+  -moz-box-shadow: 1px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%) !important;
   box-shadow: 1px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%) !important;
   padding: 16px 14px;
   margin: 5px 10px 0px 0px;
@@ -45,5 +47,9 @@
 
   .sign-up-section .react-date-inputs input {
     width: 18.6%;
+  }
+  .sign-up-section .body-text span {
+    height: 115px;
+    display: flow-root;
   }
 }
