--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -7,6 +7,7 @@
 }
 .sign-up-section h4 {
   margin: 5px 0px 10px 0px;
+  font-size: 45px;
 }
 .sign-up-section .react-date-inputs input {
   width: 10%;
@@ -27,7 +28,7 @@
   font-family: 'Poppins-Regular' !important;
 }
 .sign-up-section .body-text {
-  font-size: 16px !important;
+  font-size: 14px !important;
   font-family: 'Poppins-Regular', sans-serif !important;
   padding-top: 8px;
 }
@@ -51,5 +52,8 @@
   .sign-up-section .body-text span {
     height: 115px;
     display: flow-root;
+  }
+  .sign-up-section h4 {
+    font-size: 28px;
   }
 }
