--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -35,13 +35,16 @@
 }
 
 .payment-form .card-fields {
-  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%); 
+  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%);
   padding: 16.5px 14px;
 }
 @media screen and (max-width: 800px) {
   .payment-form .add-order button {
     width: auto;
     padding: 0px 35px;
+  }
+  .payment-form .add-gift {
+    margin: 40px 0px 20px;
   }
 }
 @media screen and (max-width: 468px) {
