--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,7 @@ h6 {
   color: #000;
   border-radius: 0;
   font-family: 'Poppins-Regular', sans-serif !important;
+  caret-color: black !important;
 }
 
 fieldset{
