--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -33,7 +33,7 @@
   padding-top: 8px;
 }
 .sign-up-section .body-text span {
-  padding-top: 0px !important;
+  padding: 0px 10px 0px 0px !important;
   float: left;
 }
 .sign-up-section .mobile-field .MuiInputLabel-root.Mui-focused {
