--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -57,7 +57,7 @@
   width: auto;
   font-family: 'Poppins-Bold', sans-serif !important;
   padding: 14px 14px 14px 0px;
-  color: #214F66;
+  color: white !important;
   font-size: 12px;
 }
 .size span {
