--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -8,13 +8,17 @@
   -moz-border-radius: 30px;
   border-radius: 30px;
 }
-.checkout-wrapper .mobile-field .MuiInputLabel-root.Mui-focused,
+/* .checkout-wrapper .mobile-field .MuiInputLabel-root.Mui-focused,
 .checkout-wrapper .mobile-field .MuiInputLabel-root.Mui-focused.Mui-error {
   padding-top: 0px !important;
-}
-.checkout-wrapper .mobile-field .MuiInputLabel-root.MuiFormLabel-filled.Mui-focused {
-  padding-top: 14px !important;
-}
+} */
+/* .checkout-wrapper .mobile-field .MuiInputLabel-root.MuiFormLabel-filled.Mui-focused { */
+  /* padding-top: 14px !important; */
+  /* font-family: 'Poppins-Bold', sans-serif !important;
+  padding: 14px 14px 14px 0px !important;
+  color: #214F66 !important;;
+  font-size: 12px !important;;
+} */
 .order .left-col {
   padding: 0px 90px 0px 60px;
 }
@@ -74,6 +78,13 @@
 }
 .order .add-order button {
   width: 100%;
+}
+
+.custom-phone-label {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  padding: 14px 14px 14px 0px !important;
+  color: #214F66 !important;;
+  font-size: 12px !important;;
 }
 
 
