--- a/src/index.css
+++ b/src/index.css
@@ -210,3 +210,55 @@ fieldset{
   border: 3px solid #7e7e7e;
 }
 
+/* mobile field custom css start */
+
+.mobile-field .MuiInputLabel-root.Mui-focused,
+.mobile-field .MuiInputLabel-root.Mui-focused.Mui-error {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  padding: 14px 14px 14px 0px !important;
+  font-size: 12px !important;
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.4375em;
+    letter-spacing: 0.00938em;
+    padding: 0;
+    position: relative;
+    display: block;
+    transform-origin: top left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: calc(133% - 24px);
+    position: absolute;
+    left: 0;
+    top: 0;
+    -webkit-transform: translate(14px, -9px) scale(0.75);
+    -moz-transform: translate(14px, -9px) scale(0.75);
+    -ms-transform: translate(14px, -9px) scale(0.75);
+    transform: translate(14px, -9px) scale(0.75);
+    -webkit-transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+    transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+    z-index: 1;
+    pointer-events: auto;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.mobile-field .MuiInputLabel-root.MuiFormLabel-filled.Mui-focused { 
+  font-family: 'Poppins-Bold', sans-serif !important;
+  padding: 14px 14px 14px 0px !important;
+  color: #214F66 !important;
+  font-size: 12px !important;
+}
+
+.mobile-field-label {
+  font-family: 'Poppins-Bold', sans-serif !important;
+  padding: 14px 14px 14px 0px !important;
+  color: #214F66 !important;;
+  font-size: 12px !important;;
+}
+
+/* mobile field custom css end */
+
