Updated env and some minor issues

--- a/src/components/login-form/index.css
+++ b/src/components/login-form/index.css
@@ -21,6 +21,7 @@
   color: #2b4b62;
   font-family: 'Poppins-Medium' !important;
   text-decoration: none;
+  cursor: 'pointer';
 }
 
 @media screen and (max-width: 900px) {
